--- a/news.html
+++ b/news.html
@@ -9,13 +9,6 @@
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
 </head>
 <body>
-    <!-- Top Right PDB Visualizer Button -->
-    <div class="pdb-visualizer-container">
-        <a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="pdb-button">
-            PDB Visualizer
-        </a>
-    </div>
-
     <!-- Header -->
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
@@ -32,6 +25,7 @@
                 <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
                 <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
+                <li><a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="pdb-button">PDB Viewer</a></li>
             </ul>
             <ul class="social-links">
                 <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
@@ -48,18 +42,54 @@
         <section class="mb-3">
             <h2 class="text-center mb-3">Latest News</h2>
             <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <h3>Latest LinkedIn Post</h3>
+                <div class="col-md-12">
+                    <h3>Social Media Updates</h3>
                     <div class="social-post">
-                        <p>Excited to share our latest breakthrough in CRISPR technology at YID! Stay tuned for more updates. <a href="https://www.linkedin.com/in/mregorin/" target="_blank">Read more on LinkedIn</a></p>
-                        <p><small>Posted on March 25, 2025</small></p>
+                        <p>Check out my latest posts on <a href="https://www.linkedin.com/in/mregorin/" target="_blank">LinkedIn</a> and <a href="https://www.instagram.com/mregorin/" target="_blank">Instagram</a> for the most recent updates!</p>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <h3>Latest Instagram Post</h3>
+
+                    <h3>Illumina Day 2025</h3>
                     <div class="social-post">
-                        <p>Behind the scenes at YID's lab! 🧬 Working on something big. #Biotech #Innovation <a href="https://www.instagram.com/mregorin/" target="_blank">See more on Instagram</a></p>
-                        <p><small>Posted on March 26, 2025</small></p>
+                        <p>Recently, I had the privilege of attending <strong>Illumina Day 2025</strong>, an incredible event for geneticists, molecular diagnostics specialists, and bioinformaticians. It was a fantastic opportunity to explore the latest advancements in genomics, including the unveiling of the new <strong>MiSeq</strong> system, which promises to revolutionize next-generation sequencing workflows.</p>
+                    </div>
+                    <!-- Illumina Photo Gallery -->
+                    <div class="photo-gallery mb-3">
+                        <div class="row justify-content-center">
+                            <div class="col-md-2 text-center">
+                                <img src="illumina1.png" alt="Illumina Day 1" class="gallery-photo">
+                            </div>
+                            <div class="col-md-2 text-center">
+                                <img src="illumina2.png" alt="Illumina Day 2" class="gallery-photo">
+                            </div>
+                            <div class="col-md-2 text-center">
+                                <img src="illumina3.png" alt="Illumina Day 3" class="gallery-photo">
+                            </div>
+                            <div class="col-md-2 text-center">
+                                <img src="illumina4.png" alt="Illumina Day 4" class="gallery-photo">
+                            </div>
+                            <div class="col-md-2 text-center">
+                                <img src="illumina5.png" alt="Illumina Day 5" class="gallery-photo">
+                            </div>
+                        </div>
+                    </div>
+
+                    <h3>Lectures by BioGENNex</h3>
+                    <div class="social-post">
+                        <p>I also attended a series of lectures by <strong>BioGENNex</strong>, a wonderful initiative by YuriaPharm and YP Biotech. The lectures covered cutting-edge topics such as CRISPR/Cas technologies, rational drug design, proteomics, bioinformatics, wet molecular biology, recombinant technologies, and hybridoma technologies. As a bioinformatician with a biotechnological background from a technical university bachelor's program, I found this event incredibly inspiring and valuable for my professional growth.</p>
+                    </div>
+                    <!-- BioGENNex Photo Gallery -->
+                    <div class="photo-gallery mb-3">
+                        <div class="row justify-content-center">
+                            <div class="col-md-3 text-center">
+                                <img src="inst1.jpg" alt="BioGENNex 1" class="gallery-photo">
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <img src="inst2.jpg" alt="BioGENNex 2" class="gallery-photo">
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <img src="inst3.jpg" alt="BioGENNex 3" class="gallery-photo">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
