--- a/news.html
+++ b/news.html
@@ -54,20 +54,24 @@
                     </div>
                     <!-- Illumina Photo Gallery -->
                     <div class="photo-gallery mb-3">
-                        <div class="row justify-content-center">
-                            <div class="col-md-2 text-center">
+                        <!-- Перший ряд: illumina1.png і illumina2.png -->
+                        <div class="row justify-content-center mb-3">
+                            <div class="col-md-3 text-center">
                                 <img src="illumina1.png" alt="Illumina Day 1" class="gallery-photo">
                             </div>
-                            <div class="col-md-2 text-center">
+                            <div class="col-md-3 text-center">
                                 <img src="illumina2.png" alt="Illumina Day 2" class="gallery-photo">
                             </div>
-                            <div class="col-md-2 text-center">
+                        </div>
+                        <!-- Другий ряд: illumina3.png, illumina4.png, illumina5.png -->
+                        <div class="row justify-content-center">
+                            <div class="col-md-3 text-center">
                                 <img src="illumina3.png" alt="Illumina Day 3" class="gallery-photo">
                             </div>
-                            <div class="col-md-2 text-center">
+                            <div class="col-md-3 text-center">
                                 <img src="illumina4.png" alt="Illumina Day 4" class="gallery-photo">
                             </div>
-                            <div class="col-md-2 text-center">
+                            <div class="col-md-3 text-center">
                                 <img src="illumina5.png" alt="Illumina Day 5" class="gallery-photo">
                             </div>
                         </div>
