--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
-        <p data-lang="subtitle">AI Developer | Bioinformatics Specialist | Computational Biologist | Pharmaceutical Biotechnologist</p>
+        <p data-lang="subtitle"> Pharmaceutical Biotechnologist | Bioinformatician | AI & ML Developer | Computational Biologist </p>
     </header>
 
     <!-- Navigation -->
@@ -25,6 +25,7 @@
                 <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
                 <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
+                <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
                 <!--<li><a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="nav-button">PDB Viewer</a></li>-->
             </ul>
             <ul class="social-links">
@@ -106,6 +107,7 @@
                     <ul class="list-unstyled">
                         <li><strong>V.N. Karazin Kharkiv National University, Institute of Biology:</strong> Research Assistant (Aug 2023 – Jun 2024) - Excisional wound healing in Wistar rats</li>
                         <li><strong>Institute of General and Emergency Surgery named after V.T. Zaitsev:</strong> Laboratory Intern (Feb 2023 – Aug 2023) - Post-COVID syndrome inflammation studies</li>
+                        <li><strong>The Institute of Molecular Biology and Genetics of NASU:</strong> Bioinformatics & molecular biologist (Jul 2025 – nowadays) - Study of lncRNA for cancer treatment</li>
                     </ul>
                 </div>
             </div>
@@ -129,3 +131,4 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
