--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <p data-lang="about_description">
-                        I specialize in artificial intelligence, bioinformatics, pharmaceutical biotechnology, and molecular design. My expertise spans genome editing, drug development, and computational biology, with a focus on advancing biotechnology through innovative research.
+                        I specialize in artificial intelligence & ML, bioinformatics, pharmaceutical biotechnology, and molecular design. My expertise spans genome editing, drug development, and computational biology, with a focus on advancing biotechnology through innovative research.
                     </p>
                     <ul class="list-unstyled">
                         <li><strong data-lang="ai">Artificial Intelligence:</strong> Completed the CS50 course in Python, AI with Python, and web development.</li>
                         <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> Experienced with GeneXpert, RT-PCR, and qPCR technologies.</li>
                         <li><strong data-lang="genomics">Genome Editing:</strong> Extensive work with CRISPR/Cas systems and SnapGene software.</li>
                         <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> Expertise in GMP standards, drug development, cultivation of Dunaliella microalgae, and wound treatment studies in Wistar rats.</li>
-                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, CSS, and SQL.</li>
+                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), R, Java, C++, JavaScript, HTML, CSS, and SQL.</li>
                     </ul>
                     <p>
                         As the founder and CEO of <a href="#" data-page="yid.html" class="text-primary">YID</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
@@ -74,11 +74,11 @@
             <div class="row justify-content-center">
                 <div class="col-md-12">
                     <ul class="list-unstyled">
-                        <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, CSS, SQL, R (box-and-whiskers plot), Bash</li>
+                        <li><strong>Programming Languages:</strong> Python, JavaScript, Java, C++, HTML, CSS, SQL, R, Bash</li>
                         <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask, Django, Git, BitBucket</li>
                         <li><strong>Bioinformatics Software:</strong> SnapGene, Geneious, BLAST, Clustal, Mega, CHOP-CHOP, Schrödinger, MOE</li>
                         <li><strong>Technologies:</strong> Docker, Linux, NGS data analysis (Illumina data)</li>
-                        <li><strong>Laboratory:</strong> Cultivation of unicellular microalgae, animal handling, excisional wound modeling, microscopy, image processing, data analysis, basic immunological and hematological assays, rational protein engineering, CRISPR gRNA design</li>
+                        <li><strong>Laboratory:</strong> Cultivation of unicellular microalgae, animal handling, excisional wound modeling, microscopy, image processing, data analysis, basic immunological and hematological assays, rational protein engineering, CRISPR gRNA design, CRISPR <em>in vitro</em> cleavage, electroporation of CHO cells, CRISPR-Based Gene Knockout</li>
                     </ul>
                 </div>
             </div>
@@ -92,6 +92,8 @@
                     <ul class="list-unstyled">
                         <li><strong>Taras Shevchenko National University of Kyiv:</strong> MSc in Biology and Biochemistry, Specialization: Bioinformatics and Structural Biology (2024 – Present)</li>
                         <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> BSc in Biotechnology and Bioengineering, Specialization: Pharmaceutical Biotechnology (2020 – 2024, Graduated with Distinction)</li>
+                        <li><strong>UBDS3 2025:</strong> Statistics, ML, Molecular Docking, Phylogenetics, Native Redesign of Proteins, Molecular Dynamics</li>
+                        <li><strong>“CRISPR-Based Gene Knockout” course as a part of the XX International Summer School:</strong> CRISPR Knockout, , CRISPR gRNA design, CRISPR <em>in vitro</em> cleavage, electroporation of CHO cells</li>
                         <li><strong>Harvard CS50:</strong> Introduction to Computer Science, Web Development, AI with Python</li>
                         <li><strong>Kharkiv Secondary School №145:</strong> Graduated with Distinction (Gold Medal, 2020)</li>
                     </ul>
@@ -131,4 +133,5 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
