--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YID - News</title>
+    <title>FAZENA - News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
@@ -13,7 +13,7 @@
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
-        <p data-lang="subtitle">Founder & CEO of YID</p>
+        <p data-lang="subtitle">Cofounder & CEO of FAZENA</p>
     </header>
 
     <!-- Navigation -->
@@ -43,6 +43,27 @@
             <h2 class="text-center mb-3">Latest News</h2>
             <div class="row justify-content-center">
                 <div class="col-md-12">
+                    <h3>BioGENext Series 2</h3>
+                    <div class="social-post">
+                        <p>I had the privilege of attending the <strong>BioGENext Series 2</strong> as a volunteer and listener, an event hosted by the <strong>National University of Kyiv-Mohyla Academy (NaUKMA)</strong>. As a dedicated volunteer from the <strong>IMBG - Department of Molecular Oncology</strong>, I continue to support this important initiative. The highlight was <strong>Dr. Borys Olifirov's</strong> insightful presentation on <em>Fluorescence Imaging: Theory and Applications</em>. His shared resources and expertise deepened my understanding of fluorescence microscopy principles and their applications in modern scientific research.</p>
+                        <p>I'm grateful to the organizers (<strong>YP Biotech</strong>, <strong>YURiA-PHARM LLC</strong>, <strong>Institute of Molecular Biology and Genetics, NAS of Ukraine</strong>, and others), Dr. Olifirov, my dedicated team, and <strong>National University of Kyiv-Mohyla Academy</strong> for creating such a valuable platform for learning and collaboration. This experience has further fueled my passion for advancing scientific knowledge and innovation.</p>
+                        <p><strong>#BioGENext #FluorescenceMicroscopy #ScientificResearch #NaUKMA #ProfessionalDevelopment #Biotechnology</strong></p>
+                    </div>
+                    <!-- BioGENext Series 2 Photo Gallery -->
+                    <div class="photo-gallery mb-3">
+                        <div class="row justify-content-center">
+                            <div class="col-md-3 text-center">
+                                <img src="bgns21.jpg" alt="BioGENext Series 2 - 1" class="gallery-photo">
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <img src="bgns22.jpg" alt="BioGENext Series 2 - 2" class="gallery-photo">
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <img src="bgns23.jpg" alt="BioGENext Series 2 - 3" class="gallery-photo">
+                            </div>
+                        </div>
+                    </div>
+
                     <h3>Social Media Updates</h3>
                     <div class="social-post">
                         <p>Check out my latest posts on <a href="https://www.linkedin.com/in/mregorin/" target="_blank">LinkedIn</a> and <a href="https://www.instagram.com/mregorin/" target="_blank">Instagram</a> for the most recent updates!</p>
@@ -79,19 +100,19 @@
 
                     <h3>Lectures by BioGENNex</h3>
                     <div class="social-post">
-                        <p>I also attended a series of lectures by <strong>BioGENNex</strong>, a wonderful initiative by YuriaPharm and YP Biotech. The lectures covered cutting-edge topics such as CRISPR/Cas technologies, rational drug design, proteomics, bioinformatics, wet molecular biology, recombinant technologies, and hybridoma technologies. As a bioinformatician with a biotechnological background from a technical university bachelor's program, I found this event incredibly inspiring and valuable for my professional growth.</p>
+                        <p>I also attended a series of lectures by <strong>BioGENex</strong>, a wonderful initiative by YuriaPharm and YP Biotech. The lectures covered cutting-edge topics such as CRISPR/Cas technologies, rational drug design, proteomics, bioinformatics, wet molecular biology, recombinant technologies, and hybridoma technologies. As a bioinformatician with a biotechnological background from a technical university bachelor's program, I found this event incredibly inspiring and valuable for my professional growth.</p>
                     </div>
                     <!-- BioGENNex Photo Gallery -->
                     <div class="photo-gallery mb-3">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="inst1.jpg" alt="BioGENNex 1" class="gallery-photo">
+                                <img src="inst1.jpg" alt="BioGENext 1" class="gallery-photo">
                             </div>
                             <div class="col-md-3 text-center">
-                                <img src="inst2.jpg" alt="BioGENNex 2" class="gallery-photo">
+                                <img src="inst2.jpg" alt="BioGENext 2" class="gallery-photo">
                             </div>
                             <div class="col-md-3 text-center">
-                                <img src="inst3.jpg" alt="BioGENNex 3" class="gallery-photo">
+                                <img src="inst3.jpg" alt="BioGENext 3" class="gallery-photo">
                             </div>
                         </div>
                     </div>
