Update navigation links and content in index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <button class="burger-menu" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="#" data-page="index.html" class="nav-button">Home</a></li>
-                <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
-                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
+                <li><a href="#" data-page="FAZENA.html" class="nav-button">FAZENA</a></li>
+                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/FAZENA.png" alt="FAZENA" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
                 <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
                 <!--<li><a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="nav-button">PDB Viewer</a></li>-->
@@ -59,7 +59,7 @@
                         <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), R, Java, C++, JavaScript, HTML, CSS, and SQL.</li>
                     </ul>
                     <p>
-                        As the founder and CEO of <a href="#" data-page="yid.html" class="text-primary">YID</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
+                        As the founder and CEO of <a href="#" data-page="FAZENA.html" class="text-primary">FAZENA</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
@@ -133,5 +133,6 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
