--- a/yid.html
+++ b/yid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YID - Founder & CEO</title>
+    <title>FAZENA - Co-founder & CEO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
@@ -13,7 +13,7 @@
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
-        <p data-lang="subtitle">Founder & CEO of YID</p>
+        <p data-lang="subtitle">Co-founder & CEO of FAZENA</p>
     </header>
 
     <!-- Navigation -->
@@ -22,8 +22,8 @@
             <button class="burger-menu" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="#" data-page="index.html" class="nav-button">Home</a></li>
-                <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
-                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
+                <li><a href="#" data-page="FAZENA.html" class="nav-button">FAZENA</a></li>
+                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/FAZENA.png" alt="FAZENA" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
                 <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
             </ul>
@@ -40,14 +40,14 @@
     <!-- Main Content -->
     <main class="container mt-3">
         <section class="mb-3">
-            <h2 class="text-center mb-3">YID - About the Company</h2>
+            <h2 class="text-center mb-3">FAZENA - About the Company</h2>
             <div class="row justify-content-center">
                 <div class="col-md-4 text-center">
-                    <img src="1.png" alt="YID Photo 1" class="inline-photo">
+                    <img src="1.png" alt="FAZENA Photo 1" class="inline-photo">
                 </div>
                 <div class="col-md-4 text-center">
                     <p>
-                        YID is a cutting-edge biotechnology company founded by Yehor Franchuk. Our mission is to revolutionize biotechnology through AI, bioinformatics, and computational biology.
+                        FAZENA is a cutting-edge biotechnology company founded by Yehor Franchuk. Our mission is to revolutionize biotechnology through AI, bioinformatics, and computational biology.
                     </p>
                     <h3 class="mt-3">Our Mission</h3>
                     <p>
@@ -65,7 +65,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="2.png" alt="YID Photo 2" class="inline-photo">
+                    <img src="2.png" alt="FAZENA Photo 2" class="inline-photo">
                 </div>
             </div>
         </section>
