--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
-        <p data-lang="subtitle">Cofounder & CEO of FAZENA</p>
+        <p data-lang="subtitle">Co-founder & CEO of FAZENA</p>
     </header>
 
     <!-- Navigation -->
@@ -22,8 +22,8 @@
             <button class="burger-menu" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="#" data-page="index.html" class="nav-button">Home</a></li>
-                <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
-                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
+                <li><a href="#" data-page="FAZENA.html" class="nav-button">FAZENA</a></li>
+                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/FAZENA.png" alt="FAZENA" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
                 <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
             </ul>
