--- a/yid.html
+++ b/yid.html
@@ -55,13 +55,13 @@
                     </p>
                     <h3 class="mt-3">Key Achievements</h3>
                     <ul class="list-unstyled">
-                        <li><strong>CRISPR-Cas9 Technologies:</strong> Precision genome editing tools.</li>
+                        <li><strong>CRISPR-driven Technologies:</strong> Precision genome editing tools.</li>
                         <li><strong>Drug Design:</strong> Machine learning for drug discovery.</li>
                         <li><strong>Multi-Omics Analysis:</strong> Personalized medicine solutions.</li>
                     </ul>
                     <h3 class="mt-3">Team Leadership</h3>
                     <p>
-                        As founder and CEO, I lead a team of experts in AI, bioinformatics, and molecular biology, driving innovation in biotechnology.
+                        As Co-founder and CEO, I lead a team of experts in AI, bioinformatics, and molecular biology, driving innovation in biotechnology.
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
