Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <button class="burger-menu" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="#" data-page="index.html" class="nav-button">Home</a></li>
-                <li><a href="#" data-page="FAZENA.html" class="nav-button">FAZENA</a></li>
-                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/FAZENA.png" alt="FAZENA" class="nav-icon"></a></li>
+                <li><a href="#" data-page="FAZENA.html" target="_blank"><img src="icons/FAZENA.png" alt="FAZENA" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
                 <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
                 <!--<li><a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="nav-button">PDB Viewer</a></li>-->
@@ -133,6 +132,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
