Fix typo in heading from 'BioGENNex' to 'BioGENex'

--- a/news.html
+++ b/news.html
@@ -97,7 +97,7 @@
                         </div>
                     </div>
 
-                    <h3>Lectures by BioGENNex</h3>
+                    <h3>Lectures by BioGENex</h3>
                     <div class="social-post">
                         <p>I also attended a series of lectures by <strong>BioGENex</strong>, a wonderful initiative by YuriaPharm and YP Biotech. The lectures covered cutting-edge topics such as CRISPR/Cas technologies, rational drug design, proteomics, bioinformatics, wet molecular biology, recombinant technologies, and hybridoma technologies. As a bioinformatician with a biotechnological background from a technical university bachelor's program, I found this event incredibly inspiring and valuable for my professional growth.</p>
                     </div>
