--- a/FAZENA.html
+++ b/FAZENA.html
@@ -7,9 +7,145 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
+    <style>
+        /* New styles for the updated page */
+        body {
+            background: linear-gradient(135deg, #0d1b2a, #1b263b, #415a77);
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        /* Background with scientific imagery */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://www.transparenttextures.com/patterns/molecules.png') repeat,
+                        linear-gradient(rgba(0, 0, 255, 0.1), rgba(255, 0, 255, 0.1));
+            opacity: 0.2;
+            z-index: -1;
+        }
+
+        .main-title {
+            text-align: center;
+            font-size: 2.5rem;
+            color: #00f7ff;
+            text-shadow: 0 0 10px #ff00ff, 0 0 20px #00f7ff;
+            margin: 2rem 0;
+            font-weight: bold;
+        }
+
+        .team-section {
+            margin: 2rem auto;
+            padding: 2rem;
+            background: rgba(27, 38, 59, 0.8);
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 247, 255, 0.5);
+        }
+
+        .team-photo {
+            width: 100%;
+            max-width: 200px;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 1rem;
+            border: 2px solid #ff00ff;
+            box-shadow: 0 0 10px rgba(0, 247, 255, 0.7);
+        }
+
+        .team-member {
+            text-align: center;
+            color: #ffffff;
+        }
+
+        .team-member h3 {
+            color: #00f7ff;
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .team-member p {
+            color: #e0e0e0;
+            font-size: 1rem;
+        }
+
+        .logo-container {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+        }
+
+        .logo-container img {
+            width: 100px;
+            height: auto;
+            transition: transform 0.3s;
+        }
+
+        .logo-container img:hover {
+            transform: scale(1.1);
+        }
+
+        @media (max-width: 768px) {
+            .main-title {
+                font-size: 1.8rem;
+            }
+
+            .team-photo {
+                max-width: 150px;
+            }
+
+            .logo-container img {
+                width: 80px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <!-- Header -->
+    <!-- Main Title -->
+    <h1 class="main-title">FAZENA - Make Proteins and Drug Discovery Great Again</h1>
+
+    <!-- Logo -->
+    <div class="logo-container">
+        <img src="FAZENAful.png" alt="FAZENA Logo">
+    </div>
+
+    <!-- Team Section -->
+    <section class="team-section container">
+        <h2 class="text-center mb-4" style="color: #00f7ff;">Our Co-founders</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-3 team-member">
+                <img src="bgns21.jpg" alt="Yehor Franchuk" class="team-photo">
+                <h3>Yehor Franchuk</h3>
+                <p>Bioinformatician, Pharmaceutical Biotechnologist</p>
+                <p>Department of Molecular Biotechnology and Bioinformatics, Taras Shevchenko National University of Kyiv</p>
+                <p>Department of Molecular Oncology, Institute of Molecular Biology and Genetics NAS of Ukraine</p>
+            </div>
+            <div class="col-md-3 team-member">
+                <img src="dmitro.jpg" alt="Dmitro Aleksandrovych" class="team-photo">
+                <h3>Dmitro Aleksandrovych</h3>
+                <p>Biotechnologist, Microbiologist</p>
+                <p>Department of Microbiology, Virology and Bacteriology, Odesa I.I. Mechnikov National University</p>
+            </div>
+            <div class="col-md-3 team-member">
+                <img src="anatolii.jpg" alt="Anatolii Zbrotskyi" class="team-photo">
+                <h3>Anatolii Zbrotskyi</h3>
+                <p>Genetician, Biochemist</p>
+                <p>Ivan Franko National University of Lviv</p>
+            </div>
+            <div class="col-md-3 team-member">
+                <img src="yevhenii.jpg" alt="Yevhenii Zhuromskyi" class="team-photo">
+                <h3>Yevhenii Zhuromskyi</h3>
+                <p>Biotechnologist</p>
+                <p>National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Original Header -->
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
@@ -85,5 +221,18 @@
     </footer>
 
     <script src="scripts.js"></script>
+    <script>
+        // Ensure logo stays responsive
+        window.addEventListener('resize', () => {
+            const logoContainer = document.querySelector('.logo-container');
+            if (window.innerWidth < 768) {
+                logoContainer.style.top = '10px';
+                logoContainer.style.right = '10px';
+            } else {
+                logoContainer.style.top = '20px';
+                logoContainer.style.right = '20px';
+            }
+        });
+    </script>
 </body>
 </html>
