Scale up FAZENA.png icon size in navigation
Increased the size of the FAZENA.png icon in navigation and added margin for spacing.

--- a/FAZENA.html
+++ b/FAZENA.html
@@ -92,6 +92,13 @@
             font-size: 1rem;
         }
 
+        /* Increase size of FAZENA.png in navigation by 3x */
+        .nav-icon {
+            transform: scale(3);
+            transform-origin: center;
+            margin: 0 1rem; /* Add spacing to prevent overlap */
+        }
+
         @media (max-width: 768px) {
             .main-title {
                 font-size: 1.8rem;
