--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
+        <style>
+    /* Increase size of FAZENA.png in navigation by 3x */
+        .nav-icon {
+            transform: scale(3);
+            transform-origin: center;
+            margin: 0 1rem; /* Add spacing to prevent overlap */
+        }
+    </style>
+        
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -132,6 +142,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
