Update department information for team members

--- a/FAZENA.html
+++ b/FAZENA.html
@@ -164,13 +164,13 @@
                 <img src="anatolii.jpg" alt="Anatolii Zbrotskyi" class="team-photo">
                 <h3>Anatolii Zbrotskyi</h3>
                 <p>Genetician, Biochemist</p>
-                <p>Ivan Franko National University of Lviv</p>
+                <p>Department of Biochemistry, Ivan Franko National University of Lviv</p>
             </div>
             <div class="col-md-3 team-member">
                 <img src="yevhenii.jpg" alt="Yevhenii Zhuromskyi" class="team-photo">
                 <h3>Yevhenii Zhuromskyi</h3>
                 <p>Biotechnologist</p>
-                <p>National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”</p>
+                <p>Department of Biotechnics and Engineering, National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”</p>
             </div>
         </div>
     </section>
