Update logo image source in FAZENA.html

--- a/FAZENA.html
+++ b/FAZENA.html
@@ -152,7 +152,7 @@
     <!-- Main Title with Logo -->
     <div class="title-container">
         <div class="logo-container">
-            <img src="FAZENAful.png" alt="FAZENA Logo">
+            <img src="FAZENA.png" alt="FAZENA Logo">
         </div>
         <h1 class="main-title">FAZENA - Make Proteins and Drug Discovery Great Again</h1>
     </div>
